examples/type_system/failing/184_type_expr_missing_close_paren.flx
fn bad(x: (Int, String -> Int { x }
let after = 1
